--- a/themes/temaic/static/css/style.css
+++ b/themes/temaic/static/css/style.css
@@ -146,6 +146,7 @@ body > header a:hover {
 
 #barra-superior {
 	height: 70px;
+	display: flex;
 }
 
 /* Se refere ao menu principal no topo da página, com a logo do IC e as
@@ -178,7 +179,7 @@ body > header a:hover {
 	font-weight: 300;
 	line-height: 23px;
 
-	padding: 0 var(--menu-padding);
+	padding: 0 0 0 var(--menu-padding);
 }
 
 /* Se refere às categorias O INSTITUTO, ENSINO, etc. Porém, também pode afetar
