masshead para dentro dos article

--- a/themes/temaic/layouts/_default/single.html
+++ b/themes/temaic/layouts/_default/single.html
@@ -1,7 +1,7 @@
 
 {{ define "main" }}
-  <div class="masshead"><h1>{{ .Title }}</h1></div>
   <article>
+    <header class="masshead"><h1>{{ .Title }}</h1></header>
     {{ .Content }}
   </article>
 {{ end }}
