--- a/themes/temaic/static/css/style.css
+++ b/themes/temaic/static/css/style.css
@@ -476,7 +476,7 @@ footer .inferior .social {
 
 main {
 	background-color: var(--cor-fundo);
-	padding: 0;
+	padding: 0 0 15px 0;
 	margin: 0;
 }
 
