solução para os emails quebrados no iphone

--- a/themes/temaic/layouts/_default/baseof.html
+++ b/themes/temaic/layouts/_default/baseof.html
@@ -4,6 +4,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 
+<!-- sem isso o iphone quebra os emails, ele tenta estilizar diferente -->
+<meta name="format-detection" content="email=no">
+
 <!-- Open Graph -->
 <meta property="og:title" content="{{ .Title }}">
 <meta property="og:type" content="article">
