divulgação do formulário no site

--- a/themes/temaic/layouts/_default/single.html
+++ b/themes/temaic/layouts/_default/single.html
@@ -3,5 +3,10 @@
   <article>
     <header class="masshead"><h1>{{ .Title }}</h1></header>
     {{ .Content }}
+    <hr>
+    <h2>Site Novo</h2>
+    <p>Bem-vindo ao novo site do IC! Por favor nos dê sua opinião sobre ele preenchendo
+    <a href="https://forms.gle/fw1tUT99QSHXvbMv8" target="_blank" rel="noopener">esse formulário</a>!</p>
+    <p>Precisa acessar o site antigo? Use <a href="https://arquivo.ic.ufrj.br/" target="_blank" rel="noopener">arquivo.ic.ufrj.br</a></p>
   </article>
 {{ end }}
