--- a/themes/temaic/layouts/_default/single.html
+++ b/themes/temaic/layouts/_default/single.html
@@ -7,7 +7,7 @@
     <h2>Site Novo</h2>
     <p>Bem-vindo ao novo site do IC! Por favor nos dê sua opinião sobre ele preenchendo
     <a href="https://forms.gle/fw1tUT99QSHXvbMv8" target="_blank" rel="noopener">esse formulário</a>!</p>
-    <p>Precisa acessar o site antigo? Use <a href="https://arquivo.ic.ufrj.br/" target="_blank" rel="noopener">arquivo.ic.ufrj.br</a></p>
+    <p>Precisa acessar o site antigo? Use <a href="https://arquivo.ic.ufrj.br/" target="_blank" rel="noopener">arquivo.ic.ufrj.br</a> por enquanto. Caso tenha algo importante lá nos avise, já que em breve deletaremos esse link.</p>
     </section>
   </article>
 {{ end }}
