--- a/themes/temaic/layouts/noticias/list.html
+++ b/themes/temaic/layouts/noticias/list.html
@@ -2,13 +2,13 @@
   <article>
     <div class="masshead"><h1>{{ i18n "lista_de_artigos" }}</h1></div>
     {{ range .Pages }}
-      <a href="{{ .RelPermalink }}" class="noticia">
-        <h2>{{ .Title }}</h2>
+      <article class="noticia">
+        <h2><a href="{{ .RelPermalink }}">{{ .Title }}</a></h2>
         <small>{{ .Date | time.Format ":date_long" }}</small>
         <div class="{{ if .Params.description }}descricao-noticia{{ else }}preview-noticia{{ end }}">
           {{ .Params.description | default .Summary | plainify }}
         </div>
-      </a>
+      </article>
     {{ end }}
   </article>
 {{ end }}
