--- a/themes/temaic/layouts/_default/baseof.html
+++ b/themes/temaic/layouts/_default/baseof.html
@@ -19,6 +19,10 @@
   <meta name="description" content="{{ .Params.description }}">
 {{ end }}
 
+
+{{ template "_internal/google_analytics.html" . }}
+
+
 <title>{{ block "title" . }}{{ .Title }}{{ end }}</title>
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
