--- a/themes/temaic/layouts/_default/baseof.html
+++ b/themes/temaic/layouts/_default/baseof.html
@@ -7,13 +7,7 @@
 <!-- sem isso o iphone quebra os emails, ele tenta estilizar diferente -->
 <meta name="format-detection" content="email=no">
 
-<!-- Open Graph -->
-<meta property="og:title" content="{{ .Title }}">
-<meta property="og:type" content="article">
-<meta property="og:url" content="{{ .Permalink }}">
-<meta property="og:image" content="{{ with .Params.images }}{{ index . 0 }}{{ else }}https://novo.ic.ufrj.br/img/parede-vermelha.jpg{{ end }}">
-<meta property="og:description" content="{{ with .Params.description }}{{ . }}{{ else }}{{ .Summary }}{{ end }}">
-<meta property="og:site_name" content="{{ .Site.Title }}">
+{{ partial "opengraph.html" . }}
 
 {{ if .Params.description }}
   <meta name="description" content="{{ .Params.description }}">
