removido espaçamento ao redor dos emails e dos links

--- a/layouts/shortcodes/email.html
+++ b/layouts/shortcodes/email.html
@@ -1,4 +1,1 @@
-<!-- Nós obfuscamos os emails para evitar spam. Veja a classe "email" no CSS -->
-
-{{ partial "email.html" (.Get 0) }}
-
+{{- partial "email.html" (.Get 0) -}}
