o símbolo do menu mobile agora é um svg com "alt" para acessibilidade

--- a/themes/temaic/layouts/partials/header.html
+++ b/themes/temaic/layouts/partials/header.html
@@ -3,7 +3,7 @@
     <img src="{{ "/svg/logo-ic.svg" | relURL }}" alt="Logo do IC" height="40px">
     <p>{{ i18n "instituto_de_computacao" }}<br>UFRJ</p>
   </a>
-  <label for="hamburger" id="hamburger-label"><i class="bi bi-list"></i></label>
+  <label for="hamburger" id="hamburger-label"><img src="{{ "/svg/menu.svg" | relURL }}" alt="Abrir menu" height="50px"></label>
 </div>
 
 <nav id="main-header">
