desabilitar temporariamente o opengraph?
Dá um erro de compilação na minha máquina

--- a/themes/temaic/layouts/_default/baseof.html
+++ b/themes/temaic/layouts/_default/baseof.html
@@ -7,7 +7,7 @@
 <!-- sem isso o iphone quebra os emails, ele tenta estilizar diferente -->
 <meta name="format-detection" content="email=no">
 
-{{ partial "opengraph.html" . }}
+{{/* partial "opengraph.html" . */}}
 
 {{ if .Params.description }}
   <meta name="description" content="{{ .Params.description }}">
