--- a/themes/temaic/static/css/style.css
+++ b/themes/temaic/static/css/style.css
@@ -673,6 +673,7 @@ article > .sumario {
 	border: 1px solid var(--cor-borda-cinza);
 	border-radius: 10px;
 	padding: 20px;
+	margin-bottom: 20px;
 }
 article > .sumario > h2 {
 	margin-top: 0px;
