adicionados _index.mds com os títulos e descrições das páginas /noticias/ e /info/

--- a/themes/temaic/layouts/info/list.html
+++ b/themes/temaic/layouts/info/list.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
   <article>
-    <div class="masshead"><h1>{{ i18n "lista_de_artigos" }}</h1></div>
+    <div class="masshead"><h1>{{ .Title }}</h1></div>
     <ul>
       {{ range .Pages }}
         <li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
