--- a/themes/temaic/layouts/_default/baseof.html
+++ b/themes/temaic/layouts/_default/baseof.html
@@ -44,7 +44,7 @@
   {{- block "main" . -}}{{- end -}}
 </main>
 
-<footer>
+<footer role="contentinfo">
   {{- partial "footer.html" . -}}
 </footer>
 
