logo da UFRJ no footer

--- a/themes/temaic/layouts/partials/footer.html
+++ b/themes/temaic/layouts/partials/footer.html
@@ -61,5 +61,6 @@
 
 <div class="inferior">
   <p class="copyright"><small>{{ i18n "todos_direitos_reservados_ic" }}</small></p>
+  <img src="/img/ufrj-horizontal-negativa-telas.png" width="250">
 </div>
 
