link para Estrutura Administrativa como e-mail de contato

--- a/themes/temaic/layouts/partials/footer.html
+++ b/themes/temaic/layouts/partials/footer.html
@@ -33,7 +33,7 @@
         <li>Tel.: +55 21 3938-3338</li>
         <li>Tel.: +55 21 3938-3393</li>
         <li>Tel.: +55 21 3938-9516</li>
-        <li>E-mail: {{ partial "email.html" "secretaria" }}</li>
+        <li><a href="{{ i18n "link-emails-de-contato" }}">{{ i18n "emails-de-contato" }}</a></li>
         <li><a href="{{ i18n "link_mais_informacoes_contato" }}">{{ i18n "mais_informacoes_contato" }}</a></li>
       </ul>
     </address>
